--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
-    <title>Tichy-Klicker</title>
-    <link rel="stylesheet" href="./style.min.css">
+    <title>Tobias-Klicker</title>
+    <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./favicon.ico">
-    <link rel="icon" type="image/png" href="./resources/tichy_swt_192x192.png" sizes="192x192">
-    <link rel="apple-touch-icon" href="./resources/tichy_swt_180x180.png" sizes="180x180">
+    <link rel="icon" type="image/png" href="./resources/tobias.jpg" sizes="460x570">
+    <link rel="apple-touch-icon" href="./resources/tobias.jpg" sizes="460x570">
   </head>
   <body>
-    <script src="./client.min.js"></script>
+    <script src="./client.js"></script>
   </body>
 </html>
